--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 ---
 layout: default
 ---
+
 <body>
-    <h1> FPL </h1>
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquid vero ut iusto similique voluptates explicabo amet dicta cumque earum, totam laboriosam. Autem soluta obcaecati quod deserunt aspernatur! Nihil, quidem.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, animi temporibus, atque sequi saepe voluptatem quaerat totam a corrupti voluptatibus rem minima quia ullam tenetur natus repellendus placeat aspernatur vitae?
+    <h1> Monte Carlo Methods </h1>
+    <p> Suppose you are given the following question: 
+        There are 5 babies in a room, 2 boys and 3 girls. A new baby enters the room. A nurse picks a baby at rondom. The baby is a boy. What is the probability the new baby is a boy?
+        This is a question I stumbled upon in a job interviewed. Now for some this question can be answered with a couple of lines of maths using probability, but for others this may not be the case. 
+        This brief page aims to show how Monte Carlo methods can be emplyoyed to solve problems where you may not know the maths or be an expert. First I shall go through the mathematical solution (you do not have to understand this)
+        annd then I shall cover how Monte Carlo methods can help us
     </p>
+    <h1> The Math </h1>
+        
+    <h1> Monte Carlo Methods </h1>
     
 </body>
