--- a/index.html
+++ b/index.html
@@ -46,17 +46,44 @@ So our answer is 0.6.
 As questions like these get more and more complex, they require more thought and expertise. What if there is a way to solve this problem with no knowledge of statistics? Well this is the solution! Monte Carlo Methods essentially simulate the 
 situation and run enough trial to obtain a robust result. So our pseudo code is as follows for this specific question.
 <pre>
+<h2>Code</h2>
 <code> 
 n = 1,000,000 
 samples = 0
+successfull_selection = 0
+successfull_sample = 0
 new_baby = ''
 for i in range n:
         num_girls = 3
         num_boys = 2
+        if random(0,1) == 1:
+            new_baby = 'b'
+            num_boys += 1
+        else:
+            new_baby = 'g'
+            num_girls += 1
+        if 'b' == random.choice(['b','g'], prob = [num_boys/6, num_girls/6]):
+            successfull_selection += 1
+            if new_baby == 'b':
+                successfull_sample += 1
+return successfull_sample/successfull_selection
 
 </code>
 </pre>
+In this code we are sampling the scenario given, and we are only interested in the sample <i>if</i> the nurse selects a boy as this is what the 
+question tells us. And out of these samples we look at how many time was the new baby a boy and this is our result. 
 </p>
+
+<h2>Results</h2>
+
+After running 1,000,000 trials our aproximation is 0.0003 off the actual value of 0.6.
+
+<img src="Line_graph.png" alt="Line Graph">
+
+  
+
+
+<p> Is clear how MC can be used as this code requires no knowledge of probability or Bayes theorem however are results are still accurate.</p>
     
 </body>
 </html>
