adding scatter graph

--- a/index.html
+++ b/index.html
@@ -78,12 +78,15 @@ question tells us. And out of these samples we look at how many time was the new
 
 After running 1,000,000 trials our aproximation is 0.0003 off the actual value of 0.6.
 
+<img src="Scatter.png" alt="Scatter Graph">
 <img src="Line_graph.png" alt="Line Graph">
 
   
 
 
-<p> Is clear how MC can be used as this code requires no knowledge of probability or Bayes theorem however are results are still accurate.</p>
+<p> Is clear how MC can be used as this code requires no knowledge of probability or Bayes theorem however are results are still accurate. We see from the graph however that as the number of samples increase so does the time taken to run the simulation.
+A further downside to MC is that there is not interpretable results, we do not know what would be the answer say if there we originaly 4 girls. Maths can allow us to establish a relationship between the result and other variables but the MC methods does not.
+</p>
     
 </body>
 </html>
