--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ question tells us. And out of these samples we look at how many time was the new
 
 After running 1,000,000 trials our aproximation is 0.0003 off the actual value of 0.6.
 
-<img src="Scatter.png" alt="Scatter Graph">
+<img src="scatter.png" alt="Scatter Graph">
 <img src="Line_graph.png" alt="Line Graph">
 
   
