--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ layout: default
 <body>
     <h1> Monte Carlo Methods </h1>
     <p> Suppose you are given the following question: 
-        <b>There are 5 babies in a room, 2 boys and 3 girls. A new baby is born in the room. A nurse picks a baby at rondom. The baby is a boy. What is the probability the new baby is a boy?</b></p><p>
+        <b>There are 5 babies in a room, 2 boys and 3 girls. A new baby is born in the room. A nurse picks a baby at random. The baby is a boy. What is the probability the new baby is a boy?</b></p><p>
         This is a question I stumbled upon in a job interviewed. Now for some this question can be answered with a couple of lines of maths using probability, but for others this may not be the case. 
-        This brief page aims to show how Monte Carlo methods can be emplyoyed to solve problems where you may not know the maths or be an expert. First I shall go through the mathematical solution (you do not have to understand this)
-        annd then I shall cover how Monte Carlo methods can help us.
+        This brief page aims to show how Monte Carlo methods can be employed to solve problems where you may not know the maths or be an expert. First I shall go through the mathematical solution (you do not have to understand this)
+        and then I shall cover how Monte Carlo methods can help us.
     </p>
     <h2> The Math </h2>
     Suppose b represent the new baby where M is Male (boy) and F is female (Girl), and n represent the nurse selection.
@@ -31,7 +31,8 @@ layout: default
 
     \[\mathbb{P}(b=M|n=M)  = \frac{\mathbb{P}(n=M|b=M)\mathbb{P}(b=M)}{\mathbb{P}(n=M)}   \]
 
-    \[\mathbb{P}(n=M) = \mathbb{P}(n=M|b=M)\times\mathbb{P}(b=M) + \mathbb{P}(n=M|b=F)\times\mathbb{P}(b=F) = 0.5\times0.5 + \frac{1}{3}\times0.5  \] 
+    \[\mathbb{P}(n=M) = \mathbb{P}(n=M|b=M)\times\mathbb{P}(b=M) + \mathbb{P}(n=M|b=F)\times\mathbb{P}(b=F) = \]
+    \[0.5\times0.5 + \frac{1}{3}\times0.5  \] 
 
 
     \[\mathbb{P}(b=M|n=M) = \frac{0.5\times0.5}{0.5\times0.5 + \frac{1}{3}\times0.5} = \frac{0.5}{0.5 + \frac{1}{3}} = \frac{3}{5}\]
@@ -76,7 +77,7 @@ question tells us. And out of these samples we look at how many time was the new
 
 <h3>Results</h3>
 
-After running 1,000,000 trials our aproximation is 0.0003 off the actual value of 0.6.
+After running 1,000,000 trials our approximation is 0.0003 off the actual value of 0.6.
 
 <img src="scatter.png" alt="Scatter Graph">
 <img src="Line_graph.png" alt="Line Graph">
@@ -84,12 +85,12 @@ After running 1,000,000 trials our aproximation is 0.0003 off the actual value o
   
 
 <p> Is clear how MC can be used as this code requires no knowledge of probability or Bayes theorem however are results are still accurate. We see from the graph however that as the number of samples increase so does the time taken to run the simulation.
-A further downside to MC is that there is not interpretable results, we do not know what would be the answer say if there we originaly 4 girls. Maths can allow us to establish a relationship between the result and other variables but the MC methods does not. Lets look at this further.
+A further downside to MC is that there is not interpretable results, we do not know what would be the answer say if there we originally 4 girls. Maths can allow us to establish a relationship between the result and other variables but the MC methods does not. Lets look at this further.
 </p>
 
 <h2>Further Investigating</h2>
 
-<p>Lets suppose the question is <b>There are 5 babies in a room, 2 boys and an unknown number of girls. A new baby is born in the room. A nurse picks a baby at rondom. The baby is a boy. What is the probability the new baby is a boy?</b></p>
+<p>Lets suppose the question is <b>There are 5 babies in a room, 2 boys and an unknown number of girls. A new baby is born in the room. A nurse picks a baby at random. The baby is a boy. What is the probability the new baby is a boy?</b></p>
 <p>Where exactly do we start with this? Lets start with looking at the maths.</p>
 
 <h3>The Math</h3>
@@ -105,7 +106,8 @@ Suppose b represent the new baby where M is Male (boy) and F is female (Girl), a
 
 \[\mathbb{P}(b=M|n=M)  = \frac{\mathbb{P}(n=M|b=M)\mathbb{P}(b=M)}{\mathbb{P}(n=M)}   \]
 
-\[\mathbb{P}(n=M) = \mathbb{P}(n=M|b=M)\times\mathbb{P}(b=M) + \mathbb{P}(n=M|b=F)\times\mathbb{P}(b=F) = \frac{3}{g+3}\times0.5 + \frac{2}{g+3}\times0.5  = \frac{1}{2}(\frac{5}{g+3})\] 
+\[\mathbb{P}(n=M) = \mathbb{P}(n=M|b=M)\times\mathbb{P}(b=M) + \mathbb{P}(n=M|b=F)\times\mathbb{P}(b=F) = \]
+\[\frac{3}{g+3}\times0.5 + \frac{2}{g+3}\times0.5  = \frac{1}{2}(\frac{5}{g+3})\] 
 
 
 \[\mathbb{P}(b=M|n=M) = \frac{\frac{1}{2}\times \frac{3}{g+3}}{\frac{1}{2} \times \frac{5}{g+3}}  = \frac{3}{5}\]
@@ -116,7 +118,7 @@ So our answer is still 0.6! This question does not depend on the number of girls
 
 <h3>Monte Carlo Methods</h3>
 
-It is not exacly clear in this case how we solve this as we now have two unknowns. This increases the complexity of the problem exponentialy! We could try and solve for different values of g but even then we can not be sure that the answer does not change for different values of g. 
+It is not exactly clear in this case how we solve this as we now have two unknowns. This increases the complexity of the problem exponentially! We could try and solve for different values of g but even then we can not be sure that the answer does not change for different values of g. 
 This is an example of where MC methods fails to solve a problem.
 
     
